<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:padding="20dp"
            android:background="#2F243A">

            <androidx.cardview.widget.CardView
                android:id="@+id/profile_image_CV"
                android:layout_width="160dp"
                android:layout_height="160dp"
                app:cardCornerRadius="250dp"
                android:layout_centerVertical="true"
                app:cardBackgroundColor="@color/white">

                <androidx.cardview.widget.CardView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    app:cardCornerRadius="250dp"
                    android:layout_gravity="center">


                        <ImageView
                            android:id="@+id/profile_img"
                            android:contentDescription="@string/profile"
                            android:layout_width="150dp"
                            android:layout_height="150dp"
                            android:src="@drawable/def_prof"
                            android:scaleType="centerCrop"/>


                </androidx.cardview.widget.CardView>

            </androidx.cardview.widget.CardView>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/fab_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@id/profile_image_CV"
                android:layout_alignBottom="@id/profile_image_CV"
                android:clickable="true"
                android:focusable="true"
                android:tint="#2F243A"
                android:backgroundTint="#BEBBBB"
                android:contentDescription="@string/choose_a_photo"
                android:src="@drawable/baseline_photo_camera_24" />

            <TextView
                android:id="@+id/profile_full_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textSize="20sp"
                android:fontFamily="@font/bungee"
                android:layout_toEndOf="@+id/profile_image_CV"
                android:includeFontPadding="false"
                android:layout_centerVertical="true"
                android:textColor="@color/white"
                android:layout_marginLeft="15dp"/>

            <TextView
                android:id="@+id/profile_user_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:includeFontPadding="false"
                android:text="@string/user_name"
                android:textSize="12sp"
                android:fontFamily="@font/bungee"
                android:layout_toEndOf="@+id/profile_image_CV"
                android:layout_below="@id/profile_full_name"
                android:layout_centerVertical="true"
                android:textColor="#80FFFFFF"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="15dp"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name"
                app:endIconMode="clear_text"
                app:endIconTint="#802f243a"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name"
                app:endIconMode="clear_text"
                app:endIconTint="#802f243a"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/e_mail"
                app:endIconMode="clear_text"
                app:endIconTint="#802f243a"
                android:layout_marginBottom="10dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/profile_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/e_mail"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <Button
            android:id="@+id/btn_update"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/bungee"
            android:text="@string/update_profile"
            android:backgroundTint="#2F243A"
            android:layout_marginTop="20dp"/>

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/log_out"
            android:backgroundTint="#2f243a"
            android:layout_gravity="center_horizontal"
            android:textSize="14sp"
            android:fontFamily="@font/bungee"
            android:layout_marginTop="30dp"/>
    </LinearLayout>


</ScrollView>