<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StartUpScreen"
    android:background="@color/white"
    android:padding="30dp">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:src="@drawable/startscreen_backgr"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bungee"
            android:text="Crypto Trade"
            android:textColor="@color/black"
            android:layout_marginTop="100dp"
            android:textSize="36sp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/bungee"
            android:text="@string/loading_description"
            android:textColor="@color/black"
            android:textSize="10sp"
            android:textAlignment="center"/>
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp">
            
            <Button
                android:id="@+id/start_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/log_in"
                android:backgroundTint="#2F243A"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/start_register"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:backgroundTint="#2F243A"
                android:layout_weight="1"
                android:layout_margin="10dp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</ScrollView>