<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#BEBBBB">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerHorizontal="true">

            <androidx.cardview.widget.CardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                app:cardCornerRadius="10dp"
                android:backgroundTint="#2F243A">

                <LinearLayout
                    android:id="@+id/ll_parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_margin="30dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <LinearLayout
                        android:id="@+id/ll_firstConversion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_firstConversion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="5"
                            android:hint="From"
                            android:inputType="number"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/white"
                            android:textColorHint="#80FFFFFF"/>

                        <Spinner
                            android:id="@+id/spinner_firstConversion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"/>

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/ll_secondConversion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        android:orientation="horizontal">

                        <EditText
                            android:id="@+id/et_secondConversion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="5"
                            android:hint="To"
                            android:inputType="number"
                            android:backgroundTint="@color/white"
                            android:textColor="@color/white"
                            android:textColorHint="#80FFFFFF"/>

                        <Spinner
                            android:id="@+id/spinner_secondConversion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:backgroundTint="@color/white"/>

                    </LinearLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="40dp"
                android:hint="@string/coin_symbol">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exchange_coin_symbol"
                    android:inputType="none"
                    android:clickable="false"
                    android:enabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/coin_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exchange_coin_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:clickable="false"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/hashing_algorithm">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exchange_coin_hash"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:clickable="false"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="20dp"
                android:hint="@string/coin_description">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/exchange_coin_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    android:clickable="false"
                    android:maxHeight="200dp"
                    android:enabled="false"/>
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>
    </RelativeLayout>





</ScrollView>